fix container vertical overflow

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,37 +18,39 @@ $desktop: "900px";
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
   font-family: "Nunito Sans", sans-serif;
   font-size: $font-base;
-  line-height: $line-height-base; 
+  line-height: $line-height-base;
   color: $bodyColor;
   display: flex;
   min-height: 100vh;
   flex-direction: column;
 }
 
-
 #container {
-  @media(min-width: $tablet) {
+  @media (min-width: $tablet) {
     display: flex;
-    justify-content:flex-start;
+    justify-content: flex-start;
     flex: 1 0 auto;
   }
   width: 100vw;
+  max-width: 100%;
 }
 
 .content {
-  
   padding: $line-height-base;
   padding-top: 0;
   margin-top: 1.6rem;
   background-color: #fff;
- 
-  h1, h2, h3, h4 {
+
+  h1,
+  h2,
+  h3,
+  h4 {
     color: $secondaryColor;
   }
 
@@ -57,9 +59,9 @@ body {
     text-align: center;
   }
 
-  @media(min-width: $tablet) {
+  @media (min-width: $tablet) {
     width: 80%;
-    max-width: 800px;  
+    max-width: 800px;
 
     h1 {
       margin-top: 0.67em;
@@ -73,13 +75,16 @@ ul.nav {
   margin-left: 0;
 }
 
-a, a:visited, a:hover, a:active {
+a,
+a:visited,
+a:hover,
+a:active {
   color: inherit;
 }
 
 pre {
-  white-space: pre-wrap; 
-  word-wrap: break-word; 
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 .social-icons {
